// Vitest Snapshot v1

exports[`DashboardCard > should be rendered normal  1`] = `
<div>
  <div
    class="flex flex-col rounded-lg bg-white dark:bg-slate-800 p-4
 shadow-lg"
  >
    <span
      class="text-slate-500"
    >
      Today Profit
    </span>
    <div
      class="flex items-end"
    >
      <span
        class="text-xl font-bold"
        data-testid="normal"
      >
        100000
      </span>
      <div
        class="text-sm flex items-end ml-auto"
      />
    </div>
  </div>
</div>
`;

exports[`DashboardCard > should be rendered pricing  1`] = `
<div>
  <div
    class="flex flex-col rounded-lg bg-white dark:bg-slate-800 p-4
 shadow-lg"
  >
    <span
      class="text-slate-500"
    >
      Today Profit
    </span>
    <div
      class="flex items-end"
    >
      <span
        class="text-xl font-bold"
      >
        Rp 100.000
      </span>
      <div
        class="text-sm flex items-end ml-auto"
      />
    </div>
  </div>
</div>
`;
